--- a/style/talk.css
+++ b/style/talk.css
@@ -1,4 +1,4 @@
-.modal {
+.talk {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,13 +9,13 @@
   left: 0;
   z-index: 1000;
 }
-.modal__overlay {
+.talk__overlay {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
 }
-.modal__content {
+.talk__content {
   background-color: white;
   padding: 40px 100px;
   text-align: center;
